[gd_scene load_steps=7 format=3 uid="uid://bvje67ratt3te"]

[ext_resource type="FontFile" uid="uid://dqdbst8avnfuo" path="res://assets/Fonts/Lady Radical.ttf" id="1_3y7ev"]
[ext_resource type="Script" uid="uid://c36k6v6ofw2ym" path="res://Engine/Resources/Singletons/ChestItemsPopup.gd" id="1_smofu"]
[ext_resource type="Script" uid="uid://b24k0h0ivk3t0" path="res://Engine/Resources/UtilityNode/StringTableLabel.gd" id="2_smofu"]
[ext_resource type="Resource" uid="uid://eswndy3mivp6" path="res://assets/StringTables/Chest/Item.tres" id="4_q71os"]

[sub_resource type="LabelSettings" id="LabelSettings_tr7p1"]
font = ExtResource("1_3y7ev")

[sub_resource type="LabelSettings" id="LabelSettings_q71os"]
font_size = 8
font_color = Color(0.764706, 0.764706, 0.764706, 1)

[node name="ChestItemsPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_smofu")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -53.5
offset_top = -20.0
offset_right = 53.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
text = "popup.chest.title"
label_settings = SubResource("LabelSettings_tr7p1")

[node name="Control" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2

[node name="RewardsContainer" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="Control2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 7)
layout_mode = 2

[node name="StringTableLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
label_settings = SubResource("LabelSettings_q71os")
script = ExtResource("2_smofu")
table = ExtResource("4_q71os")
